[TTG] add get user profile
